# polars-coord-transforms

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
coord_lib/: requirements.txt
coord_lib/coord_lib/: pyproject.toml
coord_lib/coord_lib/src/: coord_transforms.rs
polars_coord_transforms/: __init__.py
polars_coord_transforms/polars_coord_transforms/: pyproject.toml
polars_coord_transforms/polars_coord_transforms/polars_coord_transforms/: __init__.py
src/: coord_transforms.rs  distance.rs  expressions.rs  lib.rs  s2_functions.rs
