[package]
name = "coord_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "coord_lib"
crate-type = ["cdylib"]


[dependencies]
polars = { version = "*" , features=["dtype-struct",]}
pyo3 = { version = "*", features = ["extension-module"] }
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
s2 = "0.0.12"
nalgebra = "0.31.0"
itertools = "0.12.0"
map_3d = "0.1.5"

